kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: templatebot
  labels:
    app: templatebot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: templatebot
  template:
    metadata:
      labels:
        app: templatebot
    spec:
      containers:
      - name: templatebot-app
        image: lsstsqre/templatebot:0.0.6
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: templatebot-app
